finished investments sandbox endpoint

--- a/backend/tests/sandbox.ipynb
+++ b/backend/tests/sandbox.ipynb
@@ -157,6 +157,99 @@
     "\n",
     "resp2.json()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestModel(date=datetime.datetime(2021, 1, 1, 0, 0), nested=None)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel\n",
+    "from typing import Optional\n",
+    "from datetime import datetime\n",
+    "\n",
+    "class NestedObject(BaseModel):\n",
+    "    name: str\n",
+    "\n",
+    "class TestModel(BaseModel):\n",
+    "    date: datetime\n",
+    "    nested: Optional[NestedObject] = None\n",
+    "\n",
+    "TestModel(date=\"2021-01-01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestModel(date=datetime.datetime(2021, 1, 1, 0, 0), nested=NestedObject(name='abhinav'))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TestModel.model_validate({\"date\": \"2021-01-01\", \"nested\": {\"name\": \"abhinav\"}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "a.extend([4, 5, 6])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2021-01-01'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(datetime(2021, 1, 1).date())"
+   ]
   }
  ],
  "metadata": {
